# jordy248.github.io

./: .gitignore  .gitmodules  2019.html  2020.html  404.html  CNAME  LICENSE  Makefile  README.md  about.html  archives.html  authors.html  bs-config.json  categories.html  catgegories.html  gulpfile.js  home.html  index.html  index2.html  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  tags.html  test-entry.html  test-entry10.html  test-entry11.html  test-entry12.html  test-entry2.html  test-entry3.html  test-entry4.html  test-entry5.html  test-entry6.html  test-entry7.html  test-entry8.html  test-entry9.html
1970/: index.html
1970/01/: index.html
2018/: index.html
2018/04/: index.html  test-entry.html  test-entry10.html  test-entry11.html  test-entry12.html  (+8 more)
2019/: 02.html  03.html  04.html  09.html  10.html  12.html  index.html
2020/: 05.html  12.html
author/: jordy-nelson.html
category/: home.html
content/: bayesian-hierarchical-multilevel-models-are-your-oyster.md  fivethirtyeight_riddler_2019-03-29.md  fivethirtyeight_riddler_2019-04-05.md  fivethirtyeight_riddler_2019-09-30.md  fivethirtyeight_riddler_2019-10-04.md  fivethirtyeight_riddler_2019-12-15.md  fivethirtyeight_riddler_2020-05-09.md  prob-stats-review-1.md
drafts/: prob-stats-review-1-set-theory-python.html
output/: 2019.html  2020.html  404.html  about.html  archives.html  authors.html  catgegories.html  index.html  sitemap.xml  tags.html
pages/: about.html
poetry_scripts/: scripts.py
tag/: home.html
(+189 files in other folders)
