[tool.poetry]
name = "jordy248-pelican"
version = "0.1.0"
description = ""
authors = ["jordy248 <jordy248@gmail.com>"]

packages = [
    { include = "poetry_scripts" },
    { include = "poetry_scripts/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "4.2.0"
blinker = "1.4"
DateTime = "4.3"
docutils = "0.16"
feedgenerator = "1.9.1"
html5lib = "1.1"
importlib-metadata = "1.6.0"
invoke = "1.4.1"
Jinja2 = "2.11.2"
Markdown = "3.2.2"
MarkupSafe = "1.1.1"
Pygments = "2.6.1"
python-dateutil = "2.8.1"
pytz = "2020.1"
six = "1.14.0"
Unidecode = "1.1.1"
webencodings = "0.5.1"
zipp = "3.1.0"
"zope.interface" = "5.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
freeze_requirements = "poetry_scripts.scripts:freeze_requirements"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
